--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -144,6 +144,9 @@
     <EmbeddedResource Include="frmBajarAlumno2.resx">
       <DependentUpon>frmBajarAlumno2.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmBajarAlumnos.resx">
+      <DependentUpon>frmBajarAlumnos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmCursosPorAlumno.resx">
       <DependentUpon>frmCursosPorAlumno.cs</DependentUpon>
     </EmbeddedResource>
