Capa de datos: - Nuevas clases: 1 clsManejadorAdministrador 2 clsManejadorAlumno 3 clsManejadorCurso 4 clsManejadorInscripcion - Todas las queries SQL son manejados dentro de estas clases
Entidades:
- Asiste es ahora una IEntidad llamada clsInscripcion siendo el nro de inscripcion representado por el id
- El estado de cada entidad paso de ser bool a int para facilitar el pasaje a las tablas y las comparaciones en la capa logica

Capa de logica:
- Repositorio nuevo: clsRepositorioInscripcion
- Todos los metodos de cada repositorio fueron modificados para usar los metodos de los manejadores y no contener queries
- Cada repositorio ahora controla que los datos ingresados sean correctos (fechas de cursos incongruentes, inscripciones a cursos llenos, etc)

Interfaces:
- El metodo "Lista" de IRepositorio que recibia como parametro un query ahora recibe una IEntidad con la informacion de la query

Capa de presentacion:
- Resueltos los problemas entre bool e int causados por el cambio en el Estado de las entidades

--- a/CapaLogica/CapaLogica.csproj
+++ b/CapaLogica/CapaLogica.csproj
@@ -45,6 +45,7 @@
     <Compile Include="clsManejoAsiste.cs" />
     <Compile Include="clsRepositorioAdministrador.cs" />
     <Compile Include="clsRepositorioCurso.cs" />
+    <Compile Include="clsRepositorioInscripcion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
