--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -41,9 +41,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsDBManager.cs" />
+    <Compile Include="clsManejadorAdministrador.cs" />
+    <Compile Include="clsManejadorAlumno.cs" />
+    <Compile Include="clsManejadorCurso.cs" />
+    <Compile Include="clsManejadorInscripcion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Clases\Clases.csproj">
+      <Project>{82C9015F-4668-442E-ACD6-CD69FF8254D5}</Project>
+      <Name>Clases</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Interfaces\Interfaces.csproj">
       <Project>{1F24C5CF-4711-461F-B2C0-F03A86078A0E}</Project>
       <Name>Interfaces</Name>
