--- a/Clases/Clases.csproj
+++ b/Clases/Clases.csproj
@@ -41,9 +41,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsAlumno.cs" />
+    <Compile Include="clsCuota.cs" />
+    <Compile Include="clsDicta.cs" />
     <Compile Include="clsInscripcion.cs" />
     <Compile Include="clsAdministrador.cs" />
     <Compile Include="clsCurso.cs" />
+    <Compile Include="clsNota.cs" />
+    <Compile Include="clsProfesor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
