--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -81,6 +82,12 @@
     </Compile>
     <Compile Include="frmAlumnosPorCurso.Designer.cs">
       <DependentUpon>frmAlumnosPorCurso.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmIngresos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmIngresos.Designer.cs">
+      <DependentUpon>frmIngresos.cs</DependentUpon>
     </Compile>
     <Compile Include="frmInscripcion2.cs">
       <SubType>Form</SubType>
@@ -156,6 +163,9 @@
     <EmbeddedResource Include="frmAlumnosPorCurso.resx">
       <DependentUpon>frmAlumnosPorCurso.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmIngresos.resx">
+      <DependentUpon>frmIngresos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmInscripcion2.resx">
       <DependentUpon>frmInscripcion2.cs</DependentUpon>
     </EmbeddedResource>
@@ -216,6 +226,9 @@
       <Project>{2915D900-647E-4F9F-A607-D37F955D9001}</Project>
       <Name>CapaLogica</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icono3.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
