--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -81,6 +82,12 @@
     </Compile>
     <Compile Include="frmAlumnosPorCurso.Designer.cs">
       <DependentUpon>frmAlumnosPorCurso.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmIngresos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmIngresos.Designer.cs">
+      <DependentUpon>frmIngresos.cs</DependentUpon>
     </Compile>
     <Compile Include="frmInscripcion2.cs">
       <SubType>Form</SubType>
@@ -162,6 +169,9 @@
     <EmbeddedResource Include="frmAlumnosPorCurso.resx">
       <DependentUpon>frmAlumnosPorCurso.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmIngresos.resx">
+      <DependentUpon>frmIngresos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmInscripcion2.resx">
       <DependentUpon>frmInscripcion2.cs</DependentUpon>
     </EmbeddedResource>
@@ -192,6 +202,23 @@
     <EmbeddedResource Include="frmRegistroCalificaciones.resx">
       <DependentUpon>frmRegistroCalificaciones.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="obj\x86\Debug\CapaPresentacion.frmAlumnosPorCurso.resources" />
+    <EmbeddedResource Include="obj\x86\Debug\CapaPresentacion.frmBajarAlumno2.resources" />
+    <EmbeddedResource Include="obj\x86\Debug\CapaPresentacion.frmBajarAlumnos.resources" />
+    <EmbeddedResource Include="obj\x86\Debug\CapaPresentacion.frmCargarAlumnos.resources" />
+    <EmbeddedResource Include="obj\x86\Debug\CapaPresentacion.frmCargarCursos.resources" />
+    <EmbeddedResource Include="obj\x86\Debug\CapaPresentacion.frmCursosPorAlumno.resources" />
+    <EmbeddedResource Include="obj\x86\Debug\CapaPresentacion.frmIngresos.resources" />
+    <EmbeddedResource Include="obj\x86\Debug\CapaPresentacion.frmInscripcion2.resources" />
+    <EmbeddedResource Include="obj\x86\Debug\CapaPresentacion.frmInscripcionCurso.resources" />
+    <EmbeddedResource Include="obj\x86\Debug\CapaPresentacion.frmLogin.resources" />
+    <EmbeddedResource Include="obj\x86\Debug\CapaPresentacion.frmMenu.resources" />
+    <EmbeddedResource Include="obj\x86\Debug\CapaPresentacion.frmModificarAdministradores.resources" />
+    <EmbeddedResource Include="obj\x86\Debug\CapaPresentacion.frmModificarAlumnos.resources" />
+    <EmbeddedResource Include="obj\x86\Debug\CapaPresentacion.frmModificarCursos.resources" />
+    <EmbeddedResource Include="obj\x86\Debug\CapaPresentacion.frmPrincipal.resources" />
+    <EmbeddedResource Include="obj\x86\Debug\CapaPresentacion.frmRegistrarAdministradores.resources" />
+    <EmbeddedResource Include="obj\x86\Debug\CapaPresentacion.Properties.Resources.resources" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -202,6 +229,11 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="bin\Debug\Presentacion.vshost.exe.manifest" />
+    <None Include="obj\x86\Debug\CapaPresentacion.csproj.GenerateResource.Cache" />
+    <None Include="obj\x86\Debug\CapaPresentacion.csprojResolveAssemblyReference.cache" />
+    <None Include="obj\x86\Debug\DesignTimeResolveAssemblyReferences.cache" />
+    <None Include="obj\x86\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -228,6 +260,27 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Imagenes\Linea.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\Clases.dll" />
+    <Content Include="bin\Debug\Clases.pdb" />
+    <Content Include="bin\Debug\Datos.dll" />
+    <Content Include="bin\Debug\Datos.pdb" />
+    <Content Include="bin\Debug\Interfaces.dll" />
+    <Content Include="bin\Debug\Interfaces.pdb" />
+    <Content Include="bin\Debug\Presentacion.exe" />
+    <Content Include="bin\Debug\Presentacion.pdb" />
+    <Content Include="bin\Debug\Presentacion.vshost.exe" />
+    <Content Include="bin\Debug\Repositorios.dll" />
+    <Content Include="bin\Debug\Repositorios.pdb" />
+    <Content Include="obj\x86\Debug\CapaPresentacion.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\x86\Debug\Presentacion.exe" />
+    <Content Include="obj\x86\Debug\Presentacion.pdb" />
+    <Content Include="obj\x86\Debug\TempPE\Properties.Resources.Designer.cs.dll" />
+    <Content Include="Resources\icono3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Release\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
