Termine los reportes

--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -61,6 +61,18 @@
       <DependentUpon>crCertificadoFinCurso.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Reportes\crListadoAlumnosPorCurso.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>crListadoAlumnosPorCurso.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\crReciboCobroMatricula.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>crReciboCobroMatricula.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Reportes\crReporteMorosidad.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -186,9 +198,35 @@
     <Compile Include="Reportes\frmCertificadoFinCurso.Designer.cs">
       <DependentUpon>frmCertificadoFinCurso.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\frmEmisionRecibo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reportes\frmEmisionRecibo.Designer.cs">
+      <DependentUpon>frmEmisionRecibo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reportes\frmListadoAlumnos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reportes\frmListadoAlumnos.Designer.cs">
+      <DependentUpon>frmListadoAlumnos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reportes\frmReporteMorosidad.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reportes\frmReporteMorosidad.Designer.cs">
+      <DependentUpon>frmReporteMorosidad.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Reportes\crCertificadoFinCurso.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>crCertificadoFinCurso.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\crListadoAlumnosPorCurso.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>crListadoAlumnosPorCurso.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\crReciboCobroMatricula.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>crReciboCobroMatricula.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\crReporteMorosidad.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
@@ -274,6 +312,15 @@
     </Compile>
     <EmbeddedResource Include="Reportes\frmCertificadoFinCurso.resx">
       <DependentUpon>frmCertificadoFinCurso.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\frmEmisionRecibo.resx">
+      <DependentUpon>frmEmisionRecibo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\frmListadoAlumnos.resx">
+      <DependentUpon>frmListadoAlumnos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\frmReporteMorosidad.resx">
+      <DependentUpon>frmReporteMorosidad.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="bin\Debug\Presentacion.vshost.exe.manifest" />
