Agregadas algunas funciones , y creacion de una clase auxiliar para no realizar 3 consultas en lugar de 1

--- a/Clases/Clases.csproj
+++ b/Clases/Clases.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="clsAlumno.cs" />
     <Compile Include="clsCuota.cs" />
+    <Compile Include="clsCuotaFormateada.cs" />
     <Compile Include="clsInscripcion.cs" />
     <Compile Include="clsAdministrador.cs" />
     <Compile Include="clsCurso.cs" />
