--- a/Clases/Clases.csproj
+++ b/Clases/Clases.csproj
@@ -58,8 +58,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsAlumno.cs" />
+    <Compile Include="clsAlumnoFormateado.cs" />
     <Compile Include="clsCuota.cs" />
     <Compile Include="clsCuotaFormateada.cs" />
+    <Compile Include="clsCursoFormateado.cs" />
     <Compile Include="clsInscripcion.cs" />
     <Compile Include="clsAdministrador.cs" />
     <Compile Include="clsCurso.cs" />
