--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -61,6 +61,12 @@
     <Compile Include="frmCargarDocentes.Designer.cs">
       <DependentUpon>frmCargarDocentes.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmDocentesPorCurso.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDocentesPorCurso.Designer.cs">
+      <DependentUpon>frmDocentesPorCurso.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmFacturas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -236,6 +242,9 @@
     </Compile>
     <EmbeddedResource Include="frmCargarDocentes.resx">
       <DependentUpon>frmCargarDocentes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDocentesPorCurso.resx">
+      <DependentUpon>frmDocentesPorCurso.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmFacturas.resx">
       <DependentUpon>frmFacturas.cs</DependentUpon>
