--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -55,6 +55,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CursosPorDocentes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CursosPorDocentes.Designer.cs">
+      <DependentUpon>CursosPorDocentes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmAsignarProfesores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAsignarProfesores.Designer.cs">
+      <DependentUpon>frmAsignarProfesores.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmCargarDocentes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -240,6 +252,12 @@
     <Compile Include="Reportes\frmReporteMorosidad.Designer.cs">
       <DependentUpon>frmReporteMorosidad.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CursosPorDocentes.resx">
+      <DependentUpon>CursosPorDocentes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAsignarProfesores.resx">
+      <DependentUpon>frmAsignarProfesores.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmCargarDocentes.resx">
       <DependentUpon>frmCargarDocentes.cs</DependentUpon>
     </EmbeddedResource>
