--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -73,6 +73,12 @@
     <Compile Include="frmModificarDocente.Designer.cs">
       <DependentUpon>frmModificarDocente.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmRegistrarCuota.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmRegistrarCuota.Designer.cs">
+      <DependentUpon>frmRegistrarCuota.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\crCertificadoFinCurso.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -242,6 +248,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmModificarDocente.resx">
       <DependentUpon>frmModificarDocente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmRegistrarCuota.resx">
+      <DependentUpon>frmRegistrarCuota.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\crCertificadoFinCurso.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
@@ -415,6 +424,9 @@
     <Content Include="obj\x86\Debug\Presentacion.pdb" />
     <Content Include="obj\x86\Debug\TempPE\Properties.Resources.Designer.cs.dll" />
     <Content Include="Resources\icono3.png" />
+    <None Include="Resources\zona-azul.gif" />
+    <None Include="Resources\pagar icono 2.jpg" />
+    <None Include="Resources\iconoPagar.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\Release\" />
