--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -61,11 +61,17 @@
     <Compile Include="CursosPorDocentes.Designer.cs">
       <DependentUpon>CursosPorDocentes.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmAsignarProfesores.cs">
+    <Compile Include="frmAsignarDocentes.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmAsignarProfesores.Designer.cs">
-      <DependentUpon>frmAsignarProfesores.cs</DependentUpon>
+    <Compile Include="frmAsignarDocentes.Designer.cs">
+      <DependentUpon>frmAsignarDocentes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmAsignarDocentes2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAsignarDocentes2.Designer.cs">
+      <DependentUpon>frmAsignarDocentes2.cs</DependentUpon>
     </Compile>
     <Compile Include="frmCargarDocentes.cs">
       <SubType>Form</SubType>
@@ -261,8 +267,8 @@
     <EmbeddedResource Include="CursosPorDocentes.resx">
       <DependentUpon>CursosPorDocentes.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmAsignarProfesores.resx">
-      <DependentUpon>frmAsignarProfesores.cs</DependentUpon>
+    <EmbeddedResource Include="frmAsignarDocentes.resx">
+      <DependentUpon>frmAsignarDocentes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmCargarDocentes.resx">
       <DependentUpon>frmCargarDocentes.cs</DependentUpon>
