--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -109,6 +109,12 @@
     <Compile Include="frmRegistrarCuota.Designer.cs">
       <DependentUpon>frmRegistrarCuota.cs</DependentUpon>
     </Compile>
+    <Compile Include="QuitarAsignacionDocentes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QuitarAsignacionDocentes.Designer.cs">
+      <DependentUpon>QuitarAsignacionDocentes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\crCertificadoFinCurso.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -296,6 +302,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmRegistrarCuota.resx">
       <DependentUpon>frmRegistrarCuota.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QuitarAsignacionDocentes.resx">
+      <DependentUpon>QuitarAsignacionDocentes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\crCertificadoFinCurso.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
