agregando unos controles de usuario

--- a/Controles/Controles.csproj
+++ b/Controles/Controles.csproj
@@ -83,6 +83,12 @@
     <Compile Include="usEncabezado.Designer.cs">
       <DependentUpon>usEncabezado.cs</DependentUpon>
     </Compile>
+    <Compile Include="usPie.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="usPie.Designer.cs">
+      <DependentUpon>usPie.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="DecTextBox.resx">
@@ -97,6 +103,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="usEncabezado.resx">
       <DependentUpon>usEncabezado.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="usPie.resx">
+      <DependentUpon>usPie.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
