inscripciones ya no existe IdAdministrador

--- a/CapaPresentacion/CapaPresentacion.csproj
+++ b/CapaPresentacion/CapaPresentacion.csproj
@@ -121,11 +121,11 @@
     <Compile Include="frmQuitarAsignacionDocentes.Designer.cs">
       <DependentUpon>frmQuitarAsignacionDocentes.cs</DependentUpon>
     </Compile>
-    <Compile Include="MenuProfesores.cs">
+    <Compile Include="frmMenuProfesores.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MenuProfesores.Designer.cs">
-      <DependentUpon>MenuProfesores.cs</DependentUpon>
+    <Compile Include="frmMenuProfesores.Designer.cs">
+      <DependentUpon>frmMenuProfesores.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -326,8 +326,8 @@
     <EmbeddedResource Include="frmQuitarAsignacionDocentes.resx">
       <DependentUpon>frmQuitarAsignacionDocentes.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MenuProfesores.resx">
-      <DependentUpon>MenuProfesores.cs</DependentUpon>
+    <EmbeddedResource Include="frmMenuProfesores.resx">
+      <DependentUpon>frmMenuProfesores.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\crCertificadoFinCurso.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
